// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup> that renders a button should add classes when props are changed 1`] = `
<ButtonGroup
  isBlock={true}
  isInline={false}
  size="large"
>
  <div
    className="ButtonGroup ButtonGroup--size ButtonGroup--size_large ButtonGroup--isBlock"
  >
    <Button
      className="ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_large ButtonGroup__button--isBlock"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".0"
      size="large"
      type="button"
    >
      <button
        className="Button Button--context Button--context_neutral Button--size Button--size_large ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_large ButtonGroup__button--isBlock"
        disabled={false}
        size="large"
        type="button"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_large ButtonGroup__button--isBlock"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".1"
      size="large"
      type="button"
    >
      <button
        className="Button Button--context Button--context_neutral Button--size Button--size_large ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_large ButtonGroup__button--isBlock"
        disabled={false}
        size="large"
        type="button"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;

exports[`<ButtonGroup> that renders a button should render default button correctly 1`] = `
<ButtonGroup
  isBlock={false}
  isInline={false}
  size="normal"
>
  <div
    className="ButtonGroup ButtonGroup--size ButtonGroup--size_normal"
  >
    <Button
      className="ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_normal"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".0"
      size="normal"
      type="button"
    >
      <button
        className="Button Button--context Button--context_neutral Button--size Button--size_normal ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_normal"
        disabled={false}
        size="normal"
        type="button"
      >
        A button
      </button>
    </Button>
    <Button
      className="ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_normal"
      context="neutral"
      disabled={false}
      href={null}
      isBlock={false}
      isInline={false}
      key=".1"
      size="normal"
      type="button"
    >
      <button
        className="Button Button--context Button--context_neutral Button--size Button--size_normal ButtonGroup__button ButtonGroup__button--size ButtonGroup__button--size_normal"
        disabled={false}
        size="normal"
        type="button"
      >
        Another button
      </button>
    </Button>
  </div>
</ButtonGroup>
`;
